--- a/PNC/unitstats/index.css
+++ b/PNC/unitstats/index.css
@@ -2,6 +2,10 @@
 @import "/univasset/scripts/tooltip.css" layer(tooltip);
 @import "/univasset/scripts/table.css" layer(table);
 
+#table {
+    --bkg-color: #151515;
+}
+
 .func_table {
     height: fit-content;
     max-height: 95lvh;
@@ -20,40 +24,40 @@ tbody > tr > td:first-child, thead > tr > th {
 
 /* #region Freeze */
 .freeze-row th {
-    background: #1b1b1b;
+    background: var(--bkg-color);
 }
 
 .freeze-col tr > :first-child {
     border-right: 1px dashed #b5e853;
 }
 
-/* .freeze-col tbody > tr:nth-child(odd) > td:first-child { */
-.freeze-col tbody > tr:not(.hidden):nth-child(odd) > td:first-child {
-    background: #1b1b1b;
+.freeze-col tbody > tr:nth-child(odd) > td:first-child {
+/* .freeze-col tbody > tr:not(.hidden):nth-child(odd) > td:first-child { */
+    background: var(--bkg-color);
 }
 
-/* .freeze-col tbody > tr:nth-child(even) > td:first-child { */
-.freeze-col tbody > tr:not(.hidden):nth-child(even) > td:first-child {
+.freeze-col tbody > tr:nth-child(even) > td:first-child {
+/* .freeze-col tbody > tr:not(.hidden):nth-child(even) > td:first-child { */
     background: #292f20;
 }
 /* #endregion */
 
 /* #region Sort */
 .func_table th[data-sort="hi"] {
-    background: linear-gradient(135deg, #1b1b1b, transparent 50%),
-        linear-gradient(-135deg, #1b1b1b, transparent 50%),
+    background: linear-gradient(135deg, var(--bkg-color), transparent 50%),
+        linear-gradient(-135deg, var(--bkg-color), transparent 50%),
         linear-gradient(blue, gray 50%);
 }
 
 .func_table th[data-sort="lo"] {
-    background: linear-gradient(45deg, #1b1b1b, transparent 50%),
-        linear-gradient(-45deg, #1b1b1b, transparent 50%),
+    background: linear-gradient(45deg, var(--bkg-color), transparent 50%),
+        linear-gradient(-45deg, var(--bkg-color), transparent 50%),
         linear-gradient(gray 50%, red);
 }
 /* #endregion */
 
 /* #region Filter */
-.hidden {
+/* .hidden {
     display: none;
 }
 
@@ -63,7 +67,7 @@ tbody > tr > td:first-child, thead > tr > th {
 
 .func_table tbody > tr:not(.hidden):nth-child(even) {
     background-color: rgba(85, 107, 47, 0.25);
-}
+} */
 /* #endregion */
 
 /* #region Arma */
