--- a/main.css
+++ b/main.css
@@ -75,7 +75,12 @@
 		cursor: pointer;
 		color: rgb(233, 161, 152);
 		text-shadow: 0 0 5px rgba(238, 151, 162, 0.5);
-	}	
+	}
+
+	ul > li {
+		list-style-image: url("/assets/images/bullet.png");
+		line-height: 1.4;
+	}
 
 	/* #region Anchor */
 	a {
@@ -182,14 +187,6 @@
 }
 
 @layer special {
-	li {
-		line-height: 1.4;
-	}
-
-	ul li {
-		list-style-image: url("/assets/css/images/bullet.png");
-	}
-
 	pre {
 		background: rgba(0, 0, 0, 0.9);
 		border: 1px solid rgba(255, 255, 255, 0.15);
