--- a/main.css
+++ b/main.css
@@ -77,6 +77,10 @@
 		text-shadow: 0 0 5px rgba(238, 151, 162, 0.5);
 	}
 
+	li {
+		margin-inline-start: 10px;
+	}
+
 	ul > li {
 		list-style-image: url("/assets/images/bullet.png");
 		line-height: 1.4;
