--- a/GFL/index.css
+++ b/GFL/index.css
@@ -24,8 +24,8 @@
     width: 100%;
     white-space: nowrap;
     font-size: min(8cqw, 50px);
-    -webkit-text-stroke: 1px white;
-    color: black;
+    -webkit-text-stroke: 2px black;
+    color: white;
     text-align: center;
 }
 
