--- a/PNC/index.css
+++ b/PNC/index.css
@@ -26,8 +26,14 @@
     white-space: nowrap;
     -webkit-text-stroke: 2px black;
     color: white;
-    font-size: 7rem;
+    font-size: 6cqw;
     text-align: center;
+}
+
+@media screen and (resolution > 1dppx) {
+    .func_timer > :is(span, div) {
+        -webkit-text-stroke: 1px black;
+    }
 }
 
 .func_timer > span {
