--- a/PNC/index.css
+++ b/PNC/index.css
@@ -26,7 +26,7 @@
     white-space: nowrap;
     -webkit-text-stroke: 2px black;
     color: white;
-    font-size: 6cqw;
+    font-size: clamp(1rem, 6cqw, 7rem);
     text-align: center;
 }
 
