--- a/PNC/index.css
+++ b/PNC/index.css
@@ -24,14 +24,14 @@
     white-space: nowrap;
     -webkit-text-stroke: 2px black;
     color: white;
-    font-size: 6rem;
+    font-size: 10cqw;
     text-align: center;
 }
 
 @media screen and (resolution > 1dppx) {
     .func_timer > :is(span, div) {
         -webkit-text-stroke: 1px black;
-        font-size: 5rem;
+        /* font-size: 5rem; */
     }
 }
 
