--- a/PNC/index.css
+++ b/PNC/index.css
@@ -24,14 +24,13 @@
     white-space: nowrap;
     -webkit-text-stroke: 2px black;
     color: white;
-    font-size: 10cqw;
+    font-size: min(8cqw, 8rem);
     text-align: center;
 }
 
 @media screen and (resolution > 1dppx) {
     .func_timer > :is(span, div) {
-        -webkit-text-stroke: 1px black;
-        /* font-size: 5rem; */
+        -webkit-text-stroke-width: 1px;
     }
 }
 
