--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -23,7 +23,7 @@ dl, table, blockquote, figure {
     & > label {
         background-color: transparent;
         line-height: 10px;
-        flex: calc(100% / 3);
+        /* flex: calc(100% / 3); */
     }
 
     & > label:has(input:checked) {
