--- a/main.css
+++ b/main.css
@@ -77,14 +77,21 @@
 		text-shadow: 0 0 5px rgba(238, 151, 162, 0.5);
 	}
 
+	/* #region List Item */
 	li {
 		margin-inline-start: 10px;
+	}
+
+	ol > li:nth-last-child(n + 10),
+	ol > li:nth-last-child(10) ~ li {
+		margin-inline-start: 20px;		
 	}
 
 	ul > li {
 		list-style-image: url("/assets/images/bullet.png");
 		line-height: 1.4;
 	}
+	/* #endregion */
 
 	/* #region Anchor */
 	a {
