--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -141,3 +141,43 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     max-width: 100%;
 }
 /* #endregion */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* test */
+.slider {
+    position: relative;
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-auto-rows: 16px;
+}
+
+.slider::before {
+    content: attr(value);
+    opacity: 0;
+    position: absolute;
+    transition: 0.2s;
+    width: 150px;
+    transform: translateX(-50%);
+    bottom: 25px;
+    padding: 0.5em;
+    background-color: black;
+    border-radius: 0.25em;
+    color: white;
+    text-align: center;
+}
+
+.slider:hover::before {
+    opacity: 1;
+}
