--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -161,6 +161,7 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-auto-rows: 16px;
+    gap: 1px;
 }
 
 .slider::before {
