--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -164,19 +164,19 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     gap: 1px;
 }
 
-.slider > button {
+.hori-slider > button {
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.slider::before {
+.slider > input::before {
     content: attr(value);
     opacity: 0;
     position: absolute;
     transition: 0.2s;
-    width: 150px;
+    width: 50px;
     left: 50%;
     transform: translateX(-50%);
     bottom: 25px;
@@ -187,6 +187,6 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     text-align: center;
 }
 
-.slider:hover::before {
+.slider:hover > input::before {
     opacity: 1;
 }
