--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -179,7 +179,7 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     width: 50px;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 25px;
+    bottom: 100%;
     padding: 0.5em;
     background-color: black;
     border-radius: 0.25em;
