--- a/univasset/scripts/faqs/nonest.css
+++ b/univasset/scripts/faqs/nonest.css
@@ -12,9 +12,10 @@
     margin: 0px 0px 10px;
 }
 
-.tab-button:has([value="Keywords"]:checked) ~ #Keywords,
-.tab-button:has([value="Tags"]:checked) ~ #Tags,
-.tab-button:has([value="Browse"]:checked) ~ #Browse {
+/* remove :not(body.test) later */
+:not(body.test) .tab-button:has([value="Keywords"]:checked) ~ #Keywords,
+:not(body.test) .tab-button:has([value="Tags"]:checked) ~ #Tags,
+:not(body.test) .tab-button:has([value="Browse"]:checked) ~ #Browse {
     display: block;
 }
 /* #endregion */
@@ -56,4 +57,41 @@ fieldset a {
 fieldset img:not(.inline-img) {
     margin: 0 auto;
     display: block;
-}    
+}
+
+/* Page Slider */
+.slider {
+    position: relative;
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-auto-rows: 16px;
+    gap: 1px;
+}
+
+.slider > button {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider > input::before {
+    content: attr(value);
+    opacity: 0;
+    position: absolute;
+    transition: 0.2s;
+    width: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+    padding: 0.5em;
+    background-color: black;
+    border-radius: 0.25em;
+    color: white;
+    text-align: center;
+    pointer-events: none;
+}
+
+.slider:hover > input::before {
+    opacity: 1;
+}
