--- a/univasset/scripts/tabs/index.css
+++ b/univasset/scripts/tabs/index.css
@@ -35,3 +35,12 @@
 .tab-body {
     display: none;
 }
+
+/* Assumes order of buttons is the same as order of bodies. */
+body.test .tab-button:has(> label:nth-child(1) > input:not(:checked)) ~ .tab-body:nth-of-type(1),
+body.test .tab-button:has(> label:nth-child(2) > input:not(:checked)) ~ .tab-body:nth-of-type(2),
+body.test .tab-button:has(> label:nth-child(3) > input:not(:checked)) ~ .tab-body:nth-of-type(3),
+body.test .tab-button:has(> label:nth-child(4) > input:not(:checked)) ~ .tab-body:nth-of-type(4),
+body.test .tab-button:has(> label:nth-child(5) > input:not(:checked)) ~ .tab-body:nth-of-type(5) {
+    display: none;
+}
