--- a/univasset/scripts/tabs/index.css
+++ b/univasset/scripts/tabs/index.css
@@ -32,15 +32,11 @@
     margin: 0;
 }
 
-.tab-body {
-    display: none;
-}
-
 /* Assumes order of buttons is the same as order of bodies. */
-body.test .tab-button:has(> label:nth-child(1) > input:not(:checked)) ~ .tab-body:nth-of-type(1),
-body.test .tab-button:has(> label:nth-child(2) > input:not(:checked)) ~ .tab-body:nth-of-type(2),
-body.test .tab-button:has(> label:nth-child(3) > input:not(:checked)) ~ .tab-body:nth-of-type(3),
-body.test .tab-button:has(> label:nth-child(4) > input:not(:checked)) ~ .tab-body:nth-of-type(4),
-body.test .tab-button:has(> label:nth-child(5) > input:not(:checked)) ~ .tab-body:nth-of-type(5) {
+.tab-button:has(> label:nth-child(1) > input:not(:checked)) ~ .tab-body:nth-of-type(1),
+.tab-button:has(> label:nth-child(2) > input:not(:checked)) ~ .tab-body:nth-of-type(2),
+.tab-button:has(> label:nth-child(3) > input:not(:checked)) ~ .tab-body:nth-of-type(3),
+.tab-button:has(> label:nth-child(4) > input:not(:checked)) ~ .tab-body:nth-of-type(4),
+.tab-button:has(> label:nth-child(5) > input:not(:checked)) ~ .tab-body:nth-of-type(5) {
     display: none;
 }
