--- a/univasset/scripts/tabs/index.css
+++ b/univasset/scripts/tabs/index.css
@@ -33,6 +33,7 @@
 }
 
 /* Assumes order of buttons is the same as order of bodies. */
+/* Overrides "default" display when the corresponding button is unchecked. */
 .tab-button:has(> label:nth-child(1) > input:not(:checked)) ~ .tab-body:nth-of-type(1),
 .tab-button:has(> label:nth-child(2) > input:not(:checked)) ~ .tab-body:nth-of-type(2),
 .tab-button:has(> label:nth-child(3) > input:not(:checked)) ~ .tab-body:nth-of-type(3),
