--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -39,7 +39,7 @@ dl, table, blockquote, figure {
 }
 
 #Keywords input[type="text"] {
-    width: calc(100% - 76px);
+    width: calc(100% - 9rem);
 }
 
 #Tags input[type="text"] {
@@ -152,40 +152,3 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
 
 
 
-
-/* test */
-.slider {
-    position: relative;
-    display: grid;
-    grid-template-columns: 16px auto 16px;
-    grid-auto-rows: 16px;
-    gap: 1px;
-}
-
-.slider > button {
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.slider > input::before {
-    content: attr(value);
-    opacity: 0;
-    position: absolute;
-    transition: 0.2s;
-    width: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 100%;
-    padding: 0.5em;
-    background-color: black;
-    border-radius: 0.25em;
-    color: white;
-    text-align: center;
-    pointer-events: none;
-}
-
-.slider:hover > input::before {
-    opacity: 1;
-}
