--- a/univasset/scripts/faqs/nonest.css
+++ b/univasset/scripts/faqs/nonest.css
@@ -55,10 +55,11 @@ fieldset img:not(.inline-img) {
 /* Page Slider */
 .slider {
     position: relative;
-    display: grid;
+    display: inline-grid;
     grid-template-columns: 16px auto 16px;
     grid-auto-rows: 16px;
     gap: 1px;
+    width: calc(100% - 8rem);
 }
 
 .slider > button {
