--- a/univasset/scripts/faqs/nonest.css
+++ b/univasset/scripts/faqs/nonest.css
@@ -59,7 +59,7 @@ fieldset img:not(.inline-img) {
     grid-template-columns: 16px auto 16px;
     grid-auto-rows: 16px;
     gap: 1px;
-    width: calc(100% - 8rem);
+    width: calc(100% - 67px);
 }
 
 .slider > button {
