--- a/univasset/scripts/html/textstyle.css
+++ b/univasset/scripts/html/textstyle.css
@@ -10,6 +10,18 @@
     text-decoration-line: overline line-through;
 }
 
+.text-superscript {
+    vertical-align: super;
+    font-size: smaller;
+
+    /* https://stackoverflow.com/questions/501671/superscript-in-css-only */
+    /* font-size: .83em;
+    line-height: 0.5em;
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em; */
+}
+
 /* .text-bold {
     font-weight: bold;
 }
