--- a/univasset/scripts/html/textstyle.css
+++ b/univasset/scripts/html/textstyle.css
@@ -22,10 +22,10 @@
     top: -0.4em; */
 }
 
-/* .text-bold {
+.text-bold {
     font-weight: bold;
 }
 
 .text-italic {
     font-style: italic;
-}*/
+}
