--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -45,6 +45,8 @@
 		display: inline;
 	}
 	
+	/* background is title */
+	/* enlarge image on hover */
 	#downloads a {
 		display: inline-block;
 		text-align: center;
