--- a/univasset/scripts/tabs/index.css
+++ b/univasset/scripts/tabs/index.css
@@ -5,6 +5,20 @@
     border-style: initial;
 }
 
+.tab-button:focus-within {
+    animation: tabbed-blink 1s infinite;
+}
+
+@keyframes tabbed-blink {
+    33% {
+        background-color: rgba(0, 0, 0, 50%);
+    }
+
+    66% {
+        background-color: rgba(255, 255, 255, 50%);
+    }
+}
+
 /* #region Tab Width */
 .tab-button > label:first-child:nth-last-child(2),
 .tab-button > label:first-child:nth-last-child(2) ~ label {
@@ -34,12 +48,6 @@
 
 /* Assumes order of buttons is the same as order of bodies. */
 /* Overrides "default" display when the corresponding button is unchecked. */
-/* .tab-button:has(> label:nth-child(1) > input:not(:checked)) ~ .tab-body:nth-of-type(1),
-.tab-button:has(> label:nth-child(2) > input:not(:checked)) ~ .tab-body:nth-of-type(2),
-.tab-button:has(> label:nth-child(3) > input:not(:checked)) ~ .tab-body:nth-of-type(3),
-.tab-button:has(> label:nth-child(4) > input:not(:checked)) ~ .tab-body:nth-of-type(4),
-.tab-button:has(> label:nth-child(5) > input:not(:checked)) ~ .tab-body:nth-of-type(5) { */
-
 /* Temporary CSS */
 .tab-button:has(> label:nth-child(1) > input:not(:checked)) + .tab-body,
 .tab-button:has(> label:nth-child(2) > input:not(:checked)) + .tab-body + .tab-body,
