--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -1,76 +1,81 @@
-@layer generic, icons;
+header {
+	background: rgba(0, 0, 0, 0.1);
+	width: 100%;
+	border-bottom: 1px dashed #b5e853;
+	padding: 20px 0;
+	margin: 0 0 40px 0;
+}
 
-@import "./icons.css" layer(icons);
+header h1 {
+	font-size: 30px;
+	line-height: 1.5;
+	margin: 0 0 0 -40px;
+	font-weight: bold;
+	letter-spacing: -1px;
+	-webkit-font-smoothing: antialiased;
+}
 
-@layer generic {
-	header {
-		background: rgba(0, 0, 0, 0.1);
-		width: 100%;
-		border-bottom: 1px dashed #b5e853;
-		padding: 20px 0;
-		margin: 0 0 40px 0;
-	}
-	
-	header h1 {
-		font-size: 30px;
-		line-height: 1.5;
-		margin: 0 0 0 -40px;
-		font-weight: bold;
-		letter-spacing: -1px;
-		-webkit-font-smoothing: antialiased;
-	}
-	
-	@media (max-width: 1000px){
-		header h1{
-			margin-left: 0;
-		}
-	}
-	
-	header h1:before {
-		content: "./ ";
-		font-size: 24px;
-	}
-	
-	header h2 {
-		font-size: 18px;
-		font-weight: 300;
-		color: #666;
-	}
-	
-	#a-title {
-		text-decoration: none
-	}
-	
-	#a-title > h1 {
-		display: inline;
-	}
-	
-	/* background is title */
-	/* enlarge image on hover */
-	#downloads a {
-		display: inline-block;
-		text-align: center;
-		margin: 0;
-		padding: 8px 18px;
-		border-radius: 50px;
-		border: 2px solid rgba(0, 0, 0, 0.7);
-		border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-		border-top: 2px solid #000;
-		color: rgba(255, 255, 255, 0.8);
-		font-family: Helvetica, Arial, sans-serif;
-		font-weight: bold;
-		font-size: 13px;
-		text-decoration: none;
-		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05)
-	}
-	
-	#downloads span {
-		opacity: 0.6;
-		background-repeat: no-repeat;
-		background-position: 0 0;
-		width: 16px;
-		height: 16px;
-		float: left;
+@media (max-width: 1000px){
+	header h1{
+		margin-left: 0;
 	}
 }
+
+header h1:before {
+	content: "./ ";
+	font-size: 24px;
+}
+
+header h2 {
+	font-size: 18px;
+	font-weight: 300;
+	color: #666;
+}
+
+#a-title {
+	text-decoration: none
+}
+
+#a-title > h1 {
+	display: inline;
+}
+
+/* #region Buttons */
+#downloads {
+	margin: unset;
+}
+
+#downloads a {
+	display: inline-block;
+	padding: 18px 45px;
+
+	border-radius: 50px;
+	border: 2px solid rgba(0, 0, 0, 0.7);
+
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+#downloads a:hover {
+	transform: scale(1.5);
+}
+
+.btn-gfl {
+	background-image: url("./GirlsFrontline.png");
+	background-color: rgba(100, 100, 100, 30%);
+}
+
+.btn-gfl:hover {
+	background-color: rgba(100, 100, 100, 60%);
+}
+
+.btn-pnc {
+	background-image: url("./NeuralCloud.png");
+	background-color: rgba(0, 255, 255, 30%);
+}
+
+.btn-pnc:hover {
+	background-color: rgba(0, 255, 255, 60%);
+}
+/* #endregion */
