--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -50,11 +50,13 @@ header h2 {
 	padding: 18px 45px;
 
 	border-radius: 50px;
-	border: 2px solid rgba(0, 0, 0, 0.7);
+	border: 2px solid rgba(0, 0, 0, 70%);
 
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
+
+	transition: transform 0.3s, background-color 0.3s;
 }
 
 #downloads a:hover {
