--- a/PNC/unitstats/index.css
+++ b/PNC/unitstats/index.css
@@ -8,13 +8,13 @@
     max-height: var(--table-height)
 }
 
-#table:has(tbody:empty) {
+/* #table:has(tbody:empty) {
     height: var(--table-height);
-}
+} */
 
-.hidden {
+/* .hidden {
     display: none;
-}
+} */
 
 input[type="checkbox"], input[type="radio"] {
     appearance: none;
